# CalculadoraMultibase

./: .gitignore  .replit  Algarismos.cpp  Algarismos.h  CMakeLists.txt  Calculator.cpp  Calculator.h  Divisora.cpp  Divisora.h  Multiplicadora.cpp  Multiplicadora.h  Operacao.cpp  Operacao.h  README.md  Somadora.cpp  Somadora.h  SomadoraUnica.cpp  SomadoraUnica.h  Subtradora.cpp  Subtradora.h  Utils.cpp  Utils.h  main.cpp  output
